# platform.core.multimedia.mmsvc-camera

./: CMakeLists.txt  legacy-camera.pc.in  mused-camera.manifest  mused.conf
client/: CMakeLists.txt  tags
client/doc/: camera_doc.h
client/include/: camera.h  camera2.h  camera2_internal.h  camera2_private.h  camera_internal.h  camera_private.h
client/packaging/: capi-media-camera2.spec
client/src/: camera.c  camera2.c
client/test/: CMakeLists.txt  camera_museD_test.c
doc/: camera_doc.h
include/: camera.h  camera_private.h  mmsvc_camera.h  mmsvc_camera_internal.h  mmsvc_camera_msg.h  mmsvc_camera_private.h
legacy/: CMakeLists.txt
legacy/include/: legacy_camera.h  legacy_camera_internal.h  legacy_camera_private.h
legacy/src/: legacy_camera.c  legacy_camera_internal.c
muse/: CMakeLists.txt
muse/include/: muse_camera.h  muse_camera_internal.h  muse_camera_msg.h
muse/src/: muse_camera_dispatcher.c  muse_camera_ipc.c
mused/: CMakeLists.txt
mused/include/: mused_camera.h  mused_camera_msg.h
mused/src/: mmsvc_camera_dispatcher.c  mmsvc_camera_ipc.c  mused_camera_dispatcher.c  mused_camera_ipc.c
packaging/: capi-media-camera.spec  mmsvc-camera.spec  mused-camera.spec
src/: camera.c  mmsvc_camera.c  mmsvc_camera_dispatcher.c  mmsvc_camera_internal.c  mmsvc_camera_ipc.c
test/: CMakeLists.txt  camera_museD_test.c
